--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-wheel==0.33.1
-cryptography==3.2
-requests==2.21.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+cryptography==44.0.0
+idna==3.10
+pycparser==2.22
+requests==2.32.3
+setuptools==75.6.0
+urllib3==2.2.3
+wheel==0.45.1
